Add jacobian slides

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -62,13 +62,14 @@
 \newcommand{\measurementModelNoise}{\epsilon}
 \newcommand{\motionModelFunction}[1]{g\left( #1 \right)}
 \newcommand{\observationModelFunction}[1]{h\left( #1 \right)}
-\newcommand{\motionModelCovariance}{R}
+\newcommand{\motionParametersCovariance}{R}
 \newcommand{\observationModelCovariance}{Q}
 \newcommand{\motionModelJacobian}{G}
 \newcommand{\observationModelJacobian}{H}
 \newcommand{\kalmanGain}{K}
 \newcommand{\normalDistribution}[2]{\mathcal{N}\left( {#1}, {#2} \right)}
 \newcommand{\motionModelJacobianControl}{V}
+\newcommand{\motionModelCovariance}{M}
 
 
 
