Add EKF algorithm

--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -1,6 +1,9 @@
 \begin{frame}
 	\frametitle{Bibliografía}
-	\nocite{thrun2005probabilistic}
+	
+	Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
+	
+	Shon and Lindsen: Manipulating the Multivariate Gaussian Density
 	
 	\printbibliography
 	
