--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -368,11 +368,15 @@
 	\frametitle{Medición esperada}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
 	
+	\TODO{Add Image}
+	
 \end{frame}
 
 \begin{frame}
 	\frametitle{Correction step}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
+	
+		\TODO{Add Image}
 	
 \end{frame}
 
@@ -380,11 +384,21 @@
 	\frametitle{2D EKF Localization Ejemplo}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
 	
+	\TODO{Add Vídeo}
+	
 \end{frame}
 
 \begin{frame}
-	\frametitle{EKF resumen}
+	\frametitle{Resumen de EKF}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
+	
+	\begin{itemize}
+		\item Es una extensión del Filtro de Kalman
+		\item Una forma de trabajar con no-lineridades
+		\item Realiza linearizaciones locales
+		\item Funciona bien en la práctica para casos moderadamente no lineales
+		\item Grandes incertidumbres conllevan un incremento del error
+	\end{itemize}
 	
 \end{frame}
 
