Add thrun images

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -312,8 +312,9 @@
 	\frametitle{Prediction step}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
 	
-	\TODO{Agregar imagen}
-	
+	\begin{figure}[!h]
+		\includegraphics[width=0.5\columnwidth]{./images/prediction_step.pdf}
+	\end{figure}
 	
 \end{frame}
 
@@ -368,7 +369,9 @@
 	\frametitle{Medición esperada}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
 	
-	\TODO{Add Image}
+	\begin{figure}[!h]
+		\includegraphics[width=\columnwidth]{./images/measurement_prediction.pdf}
+	\end{figure}
 	
 \end{frame}
 
@@ -376,7 +379,9 @@
 	\frametitle{Correction step}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
 	
-		\TODO{Add Image}
+	\begin{figure}[!h]
+			\includegraphics[width=\columnwidth]{./images/correction_step.pdf}
+	\end{figure}
 	
 \end{frame}
 
@@ -384,7 +389,7 @@
 	\frametitle{2D EKF Localization Ejemplo}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
 	
-	\TODO{Add Vídeo}
+	\TODO{Agregar Vídeo}
 	
 \end{frame}
 
