Add mapping slides

--- a/teoricas/teorica_06/slides.tex
+++ b/teoricas/teorica_06/slides.tex
@@ -31,6 +31,9 @@
 	
 	\section{Filtro de Kalman Extendido (EKF)}
 	\input{src/ekf.tex}
+
+   	\section{Filtro de Partículas}
+    \input{src/particle_filter.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
