Add parcial files

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -292,7 +292,7 @@ ros2 launch turtlesim multisim.launch.py
 Un workspace es un directorio que contiene paquetes de ROS 2. Antes de usar ROS 2, es necesario obtener su espacio de trabajo de instalación de ROS 2 en la terminal en la que planea trabajar. Esto hace que los paquetes de ROS 2 estén disponibles para que los use en esa terminal.
 
 \begin{lstlisting}[style=bash] 
-mkdir -p ~/dev\_ws/src\\
+mkdir -p ~/dev_ws/src\\
 cd ~/dev\_ws/src
 \end{lstlisting}
 
