--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -27,7 +27,7 @@ El objetivo del trabajo práctico es la realización de los pasos básicos para 
 
 \section{Entrega}
 \begin{itemize}
-	\item Se deberá proveer un repositorio git y junto con las instrucciones de compilación y ejecución en un archivo \lstinline{README.md}.
+	\item Se debe proveer un repositorio git que contenga el código desarrollado, una imagen docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
 	\item Además, se deberá entregar un informe realizado en Lyx o latex explicando los pasos realizados y analizando los resultados obtenidos.
 \end{itemize}
 
