Add 2d ekf slam

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -386,10 +386,12 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{2D EKF Localization Ejemplo}
-	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
+	\frametitle{Ejemplo: EKF Localization 2D}
+	\note{información extraida de libro Probabilistic Robotics}
 	
-	\TODO{Agregar Vídeo}
+	\begin{figure}[!h]
+		\includegraphics[width=\columnwidth]{./images/ekf_localization_example.pdf}
+	\end{figure}
 	
 \end{frame}
 
