--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -1,4 +1,10 @@
 \begin{frame}
+	\frametitle{Material para armado de estas slides}
+	Curso de Cyrill Stashniss: \url{https://youtu.be/v-Rm9TUG9LA}
+
+\end{frame}
+
+\begin{frame}
     \frametitle{Mapas Grilla de Ocupación (Occupancy Grid Maps)}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
