--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -287,7 +287,7 @@
 	
 	\begin{figure}[!h]
 		\centering
-		\subfloat[]
+		\subfloat[\TODO{CORREGIR IMGAGEN}]
 		{
 			\includegraphics[width=0.6\columnwidth]{./images/samping_odometry_motion_model.pdf}
 		}\\
