Add sensor images

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -8,9 +8,12 @@
     \frametitle{Mapas Grilla de Ocupación (Occupancy Grid Maps)}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
-    Representación del entorno que usan en general los robóts móviles.
-    Estos tipos de mapas almacenan información sobre que áreas del mapa están ocupados (hay obstáculos) y cuales están libres (se pueden navegar). Se los puede pensar como un ``plano del lugar''.
-    Permiten hacer planeamiento de caminos.
+    \begin{itemize}
+    \item Representación del entorno que usan en general los robots móviles.
+    \item Estos tipos de mapas almacenan información sobre que áreas del mapa están ocupados (hay obstáculos) y cuales están libres (se pueden navegar). Se los puede pensar como un ``plano del lugar''.
+    \item Permiten realizar planeamiento de caminos.
+    \end{itemize}
+
     
     
 \end{frame}
