--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -15,7 +15,6 @@
     \end{itemize}
 
     
-    
 \end{frame}
 
 \begin{frame}
@@ -34,7 +33,42 @@
     \frametitle{Sensores para la creación de mapas}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
-    \TODO{Agregar imágenes de sensores}
+ 	
+   	\begin{figure}[!h]
+    		\centering
+    		\subfloat[]
+    		{
+    			\includegraphics[width=0.15\columnwidth]{./images/flir_blackfly_s_camera.jpg}
+    		}
+    		\subfloat[]
+    		{
+    			\includegraphics[width=0.2\columnwidth]{./images/stereo_camera_zed.png}
+    		}
+    		\subfloat[]
+    		{
+    			\includegraphics[width=0.1\columnwidth]{./images/ladybug5plus_360_camera.png}
+    		}
+    		\subfloat[]
+    		{
+    			\includegraphics[width=0.2\columnwidth]{./images/structured_light_kinect.png}
+    		}\\
+		   	\subfloat[]
+    		{
+    			\includegraphics[width=0.15\columnwidth]{./images/terabee_time_of_flight_camera.png}
+	    	}
+    		\subfloat[]
+    		{
+    			\includegraphics[width=0.2\columnwidth]{./images/event_camera_dvs128.png}
+    		}
+    		\subfloat[]
+    		{
+    			\includegraphics[width=0.15\columnwidth]{./images/lidar_sick.jpg}
+    		}
+	   		\subfloat[]
+    		{
+    			\includegraphics[width=0.15\columnwidth]{./images/velodyne_puck.png}
+    		}
+    	\end{figure}
     
 \end{frame}
 
