Add maps images

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -33,6 +33,7 @@
     \frametitle{Sensores para la creación de mapas}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
+    \note{Sensores exteoceptivos que nos permiten medir el entorno}
  	
    	\begin{figure}[!h]
     		\centering
@@ -76,6 +77,25 @@
     \frametitle{Mapas Volumétricos vs Features}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
+    \note{Los feature maps almacen puntos distintivos del entorno}
+    
+    \note{El feature map correspnode a un trabajo deEduardo Nebot en el victorial park. Los puntos amarillso son los troncos de los árboles.}
+    
+       	\begin{figure}[!h]
+    	\centering
+    	\subfloat[Mapa Volumétrico 2D]
+    	{
+    		\includegraphics[width=0.23\columnwidth]{./images/volumetric_map_2d.png}
+    	}
+    	\subfloat[Mapa Volumétrico 3D]
+    	{
+    		\includegraphics[width=0.3\columnwidth]{./images/volumetric_map_3d.png}
+    	}
+    	\subfloat[Mapa de features 2D]
+    	{
+    		\includegraphics[width=0.3\columnwidth]{./images/feature_map_2d.png}
+    	}
+    \end{figure}
     
 \end{frame}
 
