--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -81,7 +81,13 @@
     
     \note{El feature map correspnode a un trabajo deEduardo Nebot en el victorial park. Los puntos amarillso son los troncos de los árboles.}
     
-       	\begin{figure}[!h]
+    \note{El feature map son útiles únicamente para localizarse pero no para navegar por el entorno ya que se desconoce que hay entre los puntos.}
+    
+    \note{Los mapas volumétricos 2d pueden ser vistos como un plano del piso de la habitación}
+    
+    \note{Los mapas volumétricos explicitamente representan las áreas libres del entorno.}
+    
+   	\begin{figure}[!h]
     	\centering
     	\subfloat[Mapa Volumétrico 2D]
     	{
@@ -101,16 +107,32 @@
 
 
 \begin{frame}
-    \frametitle{Tipos de mapas}
+    \frametitle{Mapa de Nube de puntos (Point Cloud Map)}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
     
+   	\begin{figure}
+    	\includegraphics[width=0.6\columnwidth]{./images/point_cloud_map_bremen_city.png}
+    \end{figure}
+    
 \end{frame}
+
+
+\begin{frame}
+	\frametitle{Mapa Semántico (Semantic Map)}
+	\note{información extraída de https://youtu.be/v-Rm9TUG9LA}
+	
+   	\begin{figure}
+    	\includegraphics[width=0.6\columnwidth]{./images/semantic_map_semanticfusion.png}
+	\end{figure}
+	
+	
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Recontrucción de mapas}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
-    
     
 \end{frame}
 
