--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -89,11 +89,11 @@
     
    	\begin{figure}[!h]
     	\centering
-    	\subfloat[Mapa Volumétrico 2D]
+    	\subfloat[Mapa Volumétrico 2D (Grid map)]
     	{
     		\includegraphics[width=0.23\columnwidth]{./images/volumetric_map_2d.png}
     	}
-    	\subfloat[Mapa Volumétrico 3D]
+    	\subfloat[Mapa Volumétrico 3D (Voxel map)]
     	{
     		\includegraphics[width=0.3\columnwidth]{./images/volumetric_map_3d.png}
     	}
@@ -123,7 +123,7 @@
 	\note{información extraída de https://youtu.be/v-Rm9TUG9LA}
 	
    	\begin{figure}
-    	\includegraphics[width=0.6\columnwidth]{./images/semantic_map_semanticfusion.png}
+    	\includegraphics[width=0.8\columnwidth]{./images/semantic_map_semanticfusion.png}
 	\end{figure}
 	
 	
