Add topological map

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -1,6 +1,6 @@
 \begin{frame}
 	\frametitle{Material para armado de estas slides}
-	Curso de Cyrill Stashniss: \url{https://youtu.be/v-Rm9TUG9LA}
+	Curso de Cyrill Stachniss: \url{https://youtu.be/v-Rm9TUG9LA}
 
 \end{frame}
 
@@ -126,9 +126,18 @@
     	\includegraphics[width=0.8\columnwidth]{./images/semantic_map_semanticfusion.png}
 	\end{figure}
 	
-	
 \end{frame}
 
+
+\begin{frame}
+	\frametitle{Mapa Topológico}
+	\note{información extraída de https://youtu.be/v-Rm9TUG9LA}
+	
+	\begin{figure}
+		\includegraphics[width=0.8\columnwidth]{./images/topological_map.pdf}
+	\end{figure}
+	
+\end{frame}
 
 \begin{frame}
     \frametitle{Recontrucción de mapas}
