Add mapping slides

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -71,6 +71,8 @@
 \newcommand{\motionModelJacobianControl}{V}
 \newcommand{\motionModelCovariance}{M}
 
+% Mapping slides
+\newcommand{\map}{m}
 
 
 % Motion model
@@ -86,14 +88,11 @@
 \newcommand{\slerp}[1]{\slerpOp{\left( #1 \right)}}
 
 % Map structure
-\newcommand{\map}{M}
 \newcommand{\keyframesSet}{K}
 \newcommand{\mapPointsSet}{P}
 \newcommand{\observedMapPoints}{O}
 \newcommand{\covisibilityKeyframes}{CK}
 \newcommand{\localMap}{local\_map}
-
-
 
 % Bundle Adjutment
 \newcommand{\update}{\vec{\delta}}
@@ -117,8 +116,6 @@
 
 \newcommand{\relativeMotion}{\vec{\delta}}
 \newcommand{\groundTruth}[1]{{#1}^{*}}
-
-
 
 % definición del operador rot()
 \DeclareMathOperator{\rotationOp}{rot}
