Add grid map images

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -2,5 +2,6 @@
     \frametitle{Filtro de Partículas (Particle Filter)}
     \note{información extraída de https://youtu.be/MsYlueVDLI0}
     
+    \TODO{UTILIZAR LAS SLIDES DEL SEMINARIO}
     
 \end{frame}
